--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ ETHERUM_RPC_URL=""
 ARBITRUM_RPC_URL=""
 
 # Deployer private key
-DEPLOYER_KEY=""
+DEPLOYER_KEY="0x"
 
 #################### CONTRACT VERIFIERS ####################
 
 # Etherscan API key to verify contracts
-ETHERSCAN_API_KEY="DF8U1AYKKAW8NHQQJ2H34W6B49H38JI9SU"
+ETHERSCAN_API_KEY=""
